src/main/fabric8/deploymentconfig.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: secured-springboot-rest
  labels:
    application: secured-springboot-rest
spec:
  replicas: 1
  strategy:
    rollingParams:
      timeoutSeconds: 10800
    type: Rolling
  template:
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: JAVA_APP_DIR
          value: /deployments
        - name: SSO_URL
          value: ${SSO_URL}/auth
        - name: REALM
          value: ${REALM}
        - name: REALM_PUBLIC_KEY
          value: ${REALM_PUBLIC_KEY}
        - name: CLIENT_ID
          value: ${CLIENT_ID}
        - name: SECRET
          value: ${SECRET}
        image: secured-springboot-rest:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
        name: secured-springboot-rest
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - secured-springboot-rest
      from:
        kind: ImageStreamTag
        name: secured-springboot-rest:latest
    type: ImageChange
