src/main/fabric8/secure-sso-service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: secure-sso
  labels:
    application: sso
    component: server
  annotations:
    description: The web server's https port.
spec:
  ports:
  - name: port-secure-sso
    port: 8443
    targetPort: 8443
  selector:
    application: sso
    deploymentconfig: sso
  type: ClusterIP
