src/main/fabric8/secured-springboot-rest-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: secured-springboot-rest
  labels:
    application: secured-springboot-rest
spec:
  ports:
  - name: port-sb
    port: 8081
    targetPort: 8081
  selector:
    application: secured-springboot-rest
    deploymentConfig: secured-springboot-rest
  type: ClusterIP
