src/main/fabric8/sso-secure-service.yml
kind: Service
apiVersion: v1
spec:
  ports:
  - port: 8443
    targetPort: 8443
  selector:
    deploymentConfig: sso
metadata:
  name: secure-sso
  labels:
    application: sso
    component: server
  annotations:
    description: The web server's https port.
