src/main/fabric8/sso-service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: sso
  labels:
    application: sso
    component: server
  annotations:
    description: The web server's http port.
spec:
  ports:
  - name: port-sso
    port: 8080
    targetPort: 8080
  selector:
    deploymentconfig: sso
  type: ClusterIP
