src/main/fabric8/sso-template.yml
kind: Template
apiVersion: v1
metadata:
  annotations:
    iconClass: icon-jboss
    description: Application template for SpringBoot REST + Red Hat SSO demo application.
    tags: javaee,java,jboss,xpaas,sso
    version: 1.3.2
  name: sso
labels:
  template: sso
  xpaas: 1.3.2
parameters:
- description: 'Custom hostname for SSO http service route.  Leave blank for default
    hostname, e.g.: <application-name>.<project>.<default-domain-suffix>'
  name: SSO_HOSTNAME_HTTP
  value: ''
  required: false
- description: 'Custom hostname for SSO https service route.  Leave blank for default
    hostname, e.g.: <application-name>.<project>.<default-domain-suffix>'
  name: SSO_HOSTNAME_HTTPS
  value: ''
  required: false
- description: The URL for the SSO server (e.g. https://secure-sso-myproject.example.com/auth).  This
    is the URL through which the user will be redirected when a login or token is
    required by the application.
  name: SSO_URL
  value: https://secure-sso-sbr.e8ca.engint.openshiftapps.com
  required: true
- description: The SSO Client Secret for Confidential Access
  name: SSO_SECRET
  from: "[a-zA-Z0-9]{8}"
  generate: expression
  required: true
- description: File path for keycloak.json configuration to load on start
  name: SSO_IMPORT_FILE
  value: "/opt/sso-demo/sso-demo.json"
  required: false
- description: The name of the secret containing the keystore file
  name: HTTPS_SECRET
  value: sso-app-secret
  required: false
- description: The name of the keystore file within the secret
  name: HTTPS_KEYSTORE
  value: keystore.jks
  required: false
- description: The type of the keystore file (JKS or JCEKS)
  name: HTTPS_KEYSTORE_TYPE
  value: ''
  required: false
- description: The name associated with the server certificate (e.g. jboss)
  name: HTTPS_NAME
  value: jboss
  required: false
- description: The password for the keystore and certificate (e.g. mykeystorepass)
  name: HTTPS_PASSWORD
  value: mykeystorepass
  required: false
- description: The name of the secret containing the keystore file
  name: JGROUPS_ENCRYPT_SECRET
  value: sso-app-secret
  required: false
- description: The name of the keystore file within the secret
  name: JGROUPS_ENCRYPT_KEYSTORE
  value: jgroups.jceks
  required: false
- description: The name associated with the server certificate (e.g. secret-key)
  name: JGROUPS_ENCRYPT_NAME
  value: ''
  required: false
- description: The password for the keystore and certificate (e.g. password)
  name: JGROUPS_ENCRYPT_PASSWORD
  value: ''
  required: false
- description: JGroups cluster password
  name: JGROUPS_CLUSTER_PASSWORD
  from: "[a-zA-Z0-9]{8}"
  generate: expression
  required: true
- description: The username used to access the SSO service.  This is used by clients
    to create the appliction client(s) within the specified SSO realm.
  name: SSO_SERVICE_USERNAME
  value: ''
  required: false
- description: The password for the SSO service user.
  name: SSO_SERVICE_PASSWORD
  value: ''
  required: false
- description: The name of the truststore file within the secret (e.g. truststore.jks)
  name: SSO_TRUSTSTORE
  value: ''
  required: false
- description: The password for the truststore and certificate (e.g. mykeystorepass)
  name: SSO_TRUSTSTORE_PASSWORD
  value: ''
  required: false
- description: The name of the secret containing the truststore file (e.g. truststore-secret).
    Used for volume secretName
  name: SSO_TRUSTSTORE_SECRET
  value: sso-app-secret
  required: false
- description: Namespace in which the ImageStreams for Red Hat Middleware images are
    installed. These ImageStreams are normally installed in the openshift namespace.
    You should only need to modify this if you've installed the ImageStreams in a
    different namespace/project.
  name: IMAGE_STREAM_NAMESPACE
  value: openshift
  required: true
# Temp -- for SpringBoot app (delete this once f8-m-p merge bug is fixed)
- description: The name for the application.
  name: APPLICATION_NAME
  value: secured-springboot-rest
  required: true
- description: 'Custom hostname for http service route.  Leave blank for default hostname,
    e.g.: <application-name>-<project>.<default-domain-suffix>'
  name: HOSTNAME_HTTP
  value: ''
  required: false
- description: The RH-SSO realm to be used.
  name: REALM
  value: master
  required: true
- description: Realm's public key.
  name: REALM_PUBLIC_KEY
  value: MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAjoVg6150oqh7csrGMsttu7r+s4YBkYDkKrg2v6Gd5NhJw9NKnFlojPnLPoDSlxpNpN2sWegexcsFdDdmtuMzTxQ3hnkFWHDDXsyfj2fKQwDjgcxg95nRaaI+/OGhWbEsGdt/A5jxg2f4Vp4VLTwCj7Ujq4hVx67vO/zbJ2k0cD2uz5T731tvqweC7H/Os+G8B1+PpH5e1jGkDPZohe4ERCEdwNcC9IAt1tPr/LKfh+84hOkE3i9mGG/LGUiJShtw7ia2jXTMb1JErlJsLJOjh+guz6OztQOICN//+rRA4AACB//+IeJ8mr/jN/dww+RfYyeAd/SId56ae8H4SE4HQQIDAQAB
  required: true
- description: RH-SSO client id.
  name: CLIENT_ID
  value: demoapp
  required: true
- description: RH-SSO secret.
  name: SECRET
  value: cb7a8528-ad53-4b2e-afb8-72e9795c27c8
  required: true
objects:
- apiVersion: v1
  kind: Service
  metadata:
    name: dummy
