src/main/fabric8/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: secured-springboot-rest
  labels:
    application: secured-springboot-rest
spec:
  ports:
    - name: port-sb
      port: 8080
      targetPort: 8080
  selector:
    application: secured-springboot-rest
  type: ClusterIP
