src/main/fabric8/route.yml
apiVersion: v1
kind: Route
metadata:
  name: secured-springboot-rest
  labels:
    application: secured-springboot-rest
spec:
  to:
    kind: Service
    name: secured-springboot-rest
