src/main/fabric8/secured-springboot-rest-route.yml
apiVersion: v1
kind: Route
spec:
  to:
    kind: Service
    name: secured-springboot-rest
